# sentinel

./: .env.example  .gitignore  AGENTS.md  README.md  SENTINEL_HANDOVER.md  gameplan.md
backend/: README.md  check_jobs.py  deploy_all_lambdas.py  package_docker.py  pyproject.toml  sentinel.db  test_api.py  test_auth_enforced.py  test_bulk_zip_api.py  test_full.py  test_simple.py  watch_agents.py
backend/api/: auth.py  lambda_handler.py  main.py  package_docker.py  pyproject.toml
backend/common/: __init__.py  audit_pdf.py  bedrock.py  config.py  guardrails.py  heuristics.py  log_stats.py  models.py  pdf_report.py  pipeline.py  recurring_patterns.py  similarity.py  store.py  test_bulk_zip_preflight.py
backend/comparator/: agent.py  templates.py  test_compare.py
backend/database/: pyproject.toml  reset_db.py  run_migrations.py  seed_data.py  test_data_api.py  verify_database.py
backend/ingest/: cleanup_vectors.py  ingest_lambda.py  package.py  pyproject.toml  test_ingest.py  test_search.py
backend/integrations/: __init__.py  dispatcher.py  manual_dispatch.py  manual_dispatch_test.py  test_dispatcher.py
backend/intel/: Dockerfile  deploy.py  pyproject.toml  server.py  test_intel.py
backend/investigator/: agent.py  lambda_handler.py  templates.py  test_simple.py
backend/normalizer/: agent.py  lambda_handler.py  pyproject.toml  templates.py  test_full.py
backend/planner/: agent.py  lambda_handler.py  templates.py
backend/remediator/: agent.py  lambda_handler.py  templates.py
backend/replay/: __init__.py  agent.py  builder.py  templates.py  test_replay.py
(+145 files in other folders)
